--- a/apps/block_scout_web/assets/css/components/_footer.scss
+++ b/apps/block_scout_web/assets/css/components/_footer.scss
@@ -4,7 +4,7 @@ $footer-text-color: rgba(#fff, 0.7) !default;
 $footer-link-color: $footer-text-color !default;
 $footer-item-disc-color: $primary !default;
 $footer-social-icon-color: $footer-text-color !default;
-$footer-logo-height: 28px !default;
+$footer-logo-height: 64px !default;
 $footer-logo-width: auto !default;
 
 .footer {
@@ -76,7 +76,7 @@ $footer-logo-width: auto !default;
   h3 {
     color: $footer-title-color;
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 500;
     line-height: 1.4;
     margin: 0 0 15px;
   }
