--- a/apps/block_scout_web/assets/css/theme/_poa_variables-non-critical.scss
+++ b/apps/block_scout_web/assets/css/theme/_poa_variables-non-critical.scss
@@ -1,7 +1,7 @@
 // general
-$primary: #5c34a2;
-$secondary: #87e1a9;
-$tertiary: #bf9cff;
+$primary: #e4b34c;
+$secondary: #ec904f;
+$tertiary: #d2ac7e;
 $additional-font: #fff;
 
 $btn-line-color: $primary; // button border and font color && hover bg color
